parser/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On stmts shift to state 1
-- On rlist(__anonymous_0) shift to state 3
-- On program shift to state 187
## Reductions:
-- On WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR EOF DO BREAK
--   reduce production rlist(__anonymous_0) ->

State 1:
## Known stack suffix:
## stmts
## LR(1) items:
program -> stmts . EOF [ # ]
## Transitions:
-- On EOF shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## stmts EOF
## LR(1) items:
program -> stmts EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> stmts EOF

State 3:
## Known stack suffix:
## rlist(__anonymous_0)
## LR(1) items:
rlist(__anonymous_0) -> rlist(__anonymous_0) . stmt [ WHILE UNTIL RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR EOF END ELSEIF ELSE DO BREAK ]
rlist(__anonymous_0) -> rlist(__anonymous_0) . stmt SEMICOLON [ WHILE UNTIL RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR EOF END ELSEIF ELSE DO BREAK ]
stmts -> rlist(__anonymous_0) . last_stat [ UNTIL EOF END ELSEIF ELSE ]
## Transitions:
-- On WHILE shift to state 4
-- On RETURN shift to state 110
-- On REPEAT shift to state 113
-- On OPAREN shift to state 8
-- On LOCAL shift to state 117
-- On IF shift to state 130
-- On IDENT shift to state 15
-- On FUNCTION shift to state 143
-- On FOR shift to state 153
-- On DO shift to state 171
-- On BREAK shift to state 174
-- On var shift to state 31
-- On stmt shift to state 176
-- On simple_expr shift to state 178
-- On sep_list1(COMMA,name) shift to state 179
-- On name shift to state 184
-- On last_stat shift to state 185
-- On call shift to state 186
## Reductions:
-- On UNTIL EOF END ELSEIF ELSE
--   reduce production last_stat ->

State 4:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . expr DO stmts END [ WHILE UNTIL SEMICOLON RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR EOF END ELSEIF ELSE DO BREAK ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 37
-- On expr shift to state 106
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 5:
## Known stack suffix:
## TRUE
## LR(1) items:
atom -> TRUE . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> TRUE

State 6:
## Known stack suffix:
## SUB
## LR(1) items:
expr_pow -> SUB . expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 105
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 7:
## Known stack suffix:
## STRING
## LR(1) items:
atom -> STRING . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> STRING

State 8:
## Known stack suffix:
## OPAREN
## LR(1) items:
simple_expr -> OPAREN . expr CPAREN [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 37
-- On expr shift to state 103
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 9:
## Known stack suffix:
## OBRACE
## LR(1) items:
table -> OBRACE . table_body CBRACE [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OSQUARE shift to state 10
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 92
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table_entry shift to state 95
-- On table_body shift to state 101
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 37
-- On expr shift to state 100
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:
-- On CBRACE
--   reduce production table_body ->

State 10:
## Known stack suffix:
## OSQUARE
## LR(1) items:
table_entry -> OSQUARE . expr CSQUARE EQUALS expr [ SEMICOLON COMMA CBRACE ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 37
-- On expr shift to state 88
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 11:
## Known stack suffix:
## NUMBER
## LR(1) items:
atom -> NUMBER . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> NUMBER

State 12:
## Known stack suffix:
## NOT
## LR(1) items:
expr_pow -> NOT . expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 87
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 13:
## Known stack suffix:
## NIL
## LR(1) items:
atom -> NIL . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> NIL

State 14:
## Known stack suffix:
## LEN
## LR(1) items:
expr_pow -> LEN . expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 86
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 15:
## Known stack suffix:
## IDENT
## LR(1) items:
var -> IDENT . [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IN IF IDENT GT GE FUNCTION FOR EQUALS EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IN IF IDENT GT GE FUNCTION FOR EQUALS EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD
--   reduce production var -> IDENT

State 16:
## Known stack suffix:
## FUNCTION
## LR(1) items:
atom -> FUNCTION . args stmts END [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On OPAREN shift to state 17
-- On args shift to state 26
## Reductions:

State 17:
## Known stack suffix:
## OPAREN
## LR(1) items:
args -> OPAREN . sep_list0(COMMA,arg) CPAREN [ WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR END DO BREAK ]
## Transitions:
-- On IDENT shift to state 15
-- On DOTS shift to state 18
-- On var shift to state 19
-- On sep_list1(COMMA,arg) shift to state 20
-- On sep_list0(COMMA,arg) shift to state 23
-- On arg shift to state 25
## Reductions:
-- On CPAREN
--   reduce production sep_list0(COMMA,arg) ->

State 18:
## Known stack suffix:
## DOTS
## LR(1) items:
arg -> DOTS . [ CPAREN COMMA ]
## Transitions:
## Reductions:
-- On CPAREN COMMA
--   reduce production arg -> DOTS

State 19:
## Known stack suffix:
## var
## LR(1) items:
arg -> var . [ CPAREN COMMA ]
## Transitions:
## Reductions:
-- On CPAREN COMMA
--   reduce production arg -> var

State 20:
## Known stack suffix:
## sep_list1(COMMA,arg)
## LR(1) items:
sep_list0(COMMA,arg) -> sep_list1(COMMA,arg) . [ CPAREN ]
sep_list1(COMMA,arg) -> sep_list1(COMMA,arg) . COMMA arg [ CPAREN COMMA ]
## Transitions:
-- On COMMA shift to state 21
## Reductions:
-- On CPAREN
--   reduce production sep_list0(COMMA,arg) -> sep_list1(COMMA,arg)

State 21:
## Known stack suffix:
## sep_list1(COMMA,arg) COMMA
## LR(1) items:
sep_list1(COMMA,arg) -> sep_list1(COMMA,arg) COMMA . arg [ CPAREN COMMA ]
## Transitions:
-- On IDENT shift to state 15
-- On DOTS shift to state 18
-- On var shift to state 19
-- On arg shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## sep_list1(COMMA,arg) COMMA arg
## LR(1) items:
sep_list1(COMMA,arg) -> sep_list1(COMMA,arg) COMMA arg . [ CPAREN COMMA ]
## Transitions:
## Reductions:
-- On CPAREN COMMA
--   reduce production sep_list1(COMMA,arg) -> sep_list1(COMMA,arg) COMMA arg

State 23:
## Known stack suffix:
## OPAREN sep_list0(COMMA,arg)
## LR(1) items:
args -> OPAREN sep_list0(COMMA,arg) . CPAREN [ WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR END DO BREAK ]
## Transitions:
-- On CPAREN shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## OPAREN sep_list0(COMMA,arg) CPAREN
## LR(1) items:
args -> OPAREN sep_list0(COMMA,arg) CPAREN . [ WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR END DO BREAK ]
## Transitions:
## Reductions:
-- On WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR END DO BREAK
--   reduce production args -> OPAREN sep_list0(COMMA,arg) CPAREN

State 25:
## Known stack suffix:
## arg
## LR(1) items:
sep_list1(COMMA,arg) -> arg . [ CPAREN COMMA ]
## Transitions:
## Reductions:
-- On CPAREN COMMA
--   reduce production sep_list1(COMMA,arg) -> arg

State 26:
## Known stack suffix:
## FUNCTION args
## LR(1) items:
atom -> FUNCTION args . stmts END [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On stmts shift to state 27
-- On rlist(__anonymous_0) shift to state 3
## Reductions:
-- On WHILE RETURN REPEAT OPAREN LOCAL IF IDENT FUNCTION FOR END DO BREAK
--   reduce production rlist(__anonymous_0) ->

State 27:
## Known stack suffix:
## FUNCTION args stmts
## LR(1) items:
atom -> FUNCTION args stmts . END [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On END shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## FUNCTION args stmts END
## LR(1) items:
atom -> FUNCTION args stmts END . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> FUNCTION args stmts END

State 29:
## Known stack suffix:
## FALSE
## LR(1) items:
atom -> FALSE . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> FALSE

State 30:
## Known stack suffix:
## DOTS
## LR(1) items:
atom -> DOTS . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> DOTS

State 31:
## Known stack suffix:
## var
## LR(1) items:
name -> var . [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQUALS EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQUALS EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD
--   reduce production name -> var

State 32:
## Known stack suffix:
## table
## LR(1) items:
atom -> table . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> table

State 33:
## Known stack suffix:
## simple_expr
## LR(1) items:
atom -> simple_expr . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
call -> simple_expr . call_args [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
call -> simple_expr . COLON IDENT call_args [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
name -> simple_expr . DOT IDENT [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
name -> simple_expr . OSQUARE expr CSQUARE [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
-- On STRING shift to state 34
-- On OSQUARE shift to state 35
-- On OPAREN shift to state 72
-- On OBRACE shift to state 9
-- On DOT shift to state 79
-- On COLON shift to state 81
-- On table shift to state 83
-- On call_args shift to state 85
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production atom -> simple_expr
** Conflict on OPAREN

State 34:
## Known stack suffix:
## STRING
## LR(1) items:
call_args -> STRING . [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD
--   reduce production call_args -> STRING

State 35:
## Known stack suffix:
## simple_expr OSQUARE
## LR(1) items:
name -> simple_expr OSQUARE . expr CSQUARE [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQUALS EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 37
-- On expr shift to state 42
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 36:
## Known stack suffix:
## name
## LR(1) items:
simple_expr -> name . [ WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD ]
## Transitions:
## Reductions:
-- On WHILE UNTIL THEN SUB STRING SEMICOLON RETURN REPEAT POW OSQUARE OR OPAREN OBRACE NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DOT DO DIV CSQUARE CPAREN CONCAT COMMA COLON CBRACE BREAK AND ADD
--   reduce production simple_expr -> name

State 37:
## Known stack suffix:
## expr_pow
## LR(1) items:
expr -> expr_pow . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
expr_pow -> expr_pow . POW expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On POW shift to state 38
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production expr -> expr_pow

State 38:
## Known stack suffix:
## expr_pow POW
## LR(1) items:
expr_pow -> expr_pow POW . expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On TRUE shift to state 5
-- On SUB shift to state 6
-- On STRING shift to state 7
-- On OPAREN shift to state 8
-- On OBRACE shift to state 9
-- On NUMBER shift to state 11
-- On NOT shift to state 12
-- On NIL shift to state 13
-- On LEN shift to state 14
-- On IDENT shift to state 15
-- On FUNCTION shift to state 16
-- On FALSE shift to state 29
-- On DOTS shift to state 30
-- On var shift to state 31
-- On table shift to state 32
-- On simple_expr shift to state 33
-- On name shift to state 36
-- On expr_pow shift to state 39
-- On call shift to state 40
-- On atom shift to state 41
## Reductions:

State 39:
## Known stack suffix:
## expr_pow POW expr_pow
## LR(1) items:
expr_pow -> expr_pow . POW expr_pow [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
expr_pow -> expr_pow POW expr_pow . [ WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT POW OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD ]
## Transitions:
-- On POW shift to state 38
## Reductions:
-- On WHILE UNTIL THEN SUB SEMICOLON RETURN REPEAT OR OPAREN NE MUL MOD LT LOCAL LE IF IDENT GT GE FUNCTION FOR EQ EOF END ELSEIF ELSE DO DIV CSQUARE CPAREN CONCAT COMMA CBRACE BREAK AND ADD
--   reduce production expr_pow -> expr_pow POW expr_pow
